--- a/src/components/features/back/back.css
+++ b/src/components/features/back/back.css
@@ -1,4 +1,4 @@
-button {
+button.backbtn {
     display: flex;
     height: 3em;
     width: 100px;
@@ -13,19 +13,19 @@ button {
     background: #fff;
    }
    
-   button > svg {
+   button.backbtn > svg {
     margin-right: 5px;
     margin-left: 5px;
     font-size: 20px;
     transition: all 0.4s ease-in;
    }
    
-   button:hover > svg {
+   button.backbtn:hover > svg {
     font-size: 1.2em;
     transform: translateX(-5px);
    }
    
-   button:hover {
+   button.backbtn:hover {
     box-shadow: 9px 9px 33px #d1d1d1, -9px -9px 33px #ffffff;
     transform: translateY(-2px);
    }
