--- a/src/components/features/search/search.css
+++ b/src/components/features/search/search.css
@@ -1,31 +1,35 @@
-.inputBox_container {
+.search-container{
     display: flex;
-    align-items: center;
-    flex-direction: row;
-    max-width: 14em;
-    width: fit-content;
-    height: fit-content;
-    background-color: #5c6370;
-    border-radius: 0.8em;
+    justify-content: center;
+    margin-top: 5rem;
+}
+.main-s-container{
+    display: flex;
+    flex-direction: column;
+}
+.results-container{
+    display: flex;
+    justify-content: center;
+    margin-top: 0.5rem;
+    margin-left: 1rem;
+    max-height: 10rem;
     overflow: hidden;
-  }
-  
-  .search_icon {
-    height: 1em;
-    padding: 0 0.5em 0 0.8em;
-    fill: #abb2bf;
-  }
-  
-  .inputBox {
-    background-color: transparent;
-    color: #ffffff;
-    outline: none;
-    width: 100%;
-    border: 0;
-    padding: 0.5em 1.5em 0.5em 0;
-    font-size: 1em;
-  }
-  
-  ::placeholder {
-    color: #abb2bf;
-  }
+    overflow-y: scroll;
+}
+.results-subcontainer{
+    width: 12rem;
+}
+.search-result{
+    background-color: antiquewhite;
+    border: 1px solid rgb(218, 215, 215);
+    display: flex;
+    justify-content: start;
+    padding: 0.5rem;
+    font-size: 1.3rem;
+    text-decoration: none;
+    color: black;
+}
+.search-result:hover{
+    background-color: rgb(245, 198, 137);
+    cursor: pointer;
+}
