--- a/src/components/hotel/hotelcard.css
+++ b/src/components/hotel/hotelcard.css
@@ -1,10 +1,13 @@
 .hotel-card{
     height: 300 rem;
-    border: 1px dotted;
-    border-radius: 50px dotted;
-    margin: 5px;
-    padding: 5px;
+    border: 1px solid;
+    border-radius: 1rem;
+    margin: 1rem;
+    padding: 1px;
 }
 .hotel-card img{
     object-fit: contain;
+}
+img{
+    mix-blend-mode: multiply;
 }
