--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,7 @@
 @import url("../node_modules/bootstrap/dist/css/bootstrap.min.css");
+@import url("../node_modules/bootstrap-icons/font/bootstrap-icons.css");
+
+body {
+    margin: 0px;
+    padding: 0px;
+}
