--- a/src/components/hotel/hotelcard.css
+++ b/src/components/hotel/hotelcard.css
@@ -2,8 +2,8 @@
     height: 300 rem;
     border: 1px solid;
     border-radius: 1rem;
-    margin: 1rem;
-    padding: 1px;
+    margin:0.5rem 0.2rem;
+    padding: 0.7rem;
 }
 .hotel-card img{
     object-fit: contain;
