--- a/src/components/hotel/hotelcard.css
+++ b/src/components/hotel/hotelcard.css
@@ -1,9 +1,9 @@
 .hotel-card{
     height: 300 rem;
-    border: 1px solid;
     border-radius: 1rem;
     margin:0.5rem 0.2rem;
     padding: 0.7rem;
+    box-shadow: 0 15px 25px rgba(0, 0, 0, 0.1), 0 5px 10px rgba(0, 0, 0, 0.04);
 }
 .hotel-card img{
     object-fit: contain;
